@@ -46,12 +46,14 @@
 </div>
 
   [% IF config.google_analytics_key %]
-    <script src="http://www.google-analytics.com/urchin.js"
-     type="text/javascript">
-    </script>
     <script type="text/javascript">
-      _uacct = "[% CGI.escapeHTML( config.google_analytics_key  ) %]";
-      if ( typeof urchinTracker == 'function' ) urchinTracker();
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+
+    <script type="text/javascript">
+    var pageTracker = _gat._getTracker("[% CGI.escapeHTML( config.google_analytics_key  ) %]");
+    pageTracker._trackPageview();
     </script>
   [% END %]
 
